# pipelines-components

./: .container-build-ignore  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .yamllint.yml  AGENTS.md  Makefile  OWNERS  README.md  __init__.py  _reexports.py  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  component_submission.md  enhancement_request.md
.github/scripts/: README.md  conftest.py  determine_changed_assets.py  run_tests.py  test-readme-check.sh  test_package_imports.py  validate_components.py  validate_examples.py
.github/workflows/: add-ci-passed-label.yml  base-image-check.yml  build-packages.yml  ci-checks.yml  compile-and-deps.yml  component-pipeline-tests.yml  container-build-matrix-check.yml  container-build.yml  gh-workflow-approve.yml  markdown-lint.yml  package-entries-check.yml  python-lint.yml  readme-check.yml  release.yml  scripts-tests.yml  scripts-unit-tests.yml  stale-component-check.yml  test.yml  utility-tests.yml  validate-metadata-schema.yml  yaml-lint.yml
components/: __init__.py
components/data_processing/: README.md  __init__.py
components/deployment/: README.md  __init__.py
components/evaluation/: __init__.py
components/monitoring/: __init__.py
components/sdg/: ARCHITECTURE.md
components/training/: README.md  __init__.py
docs/: AGENTS.md  BESTPRACTICES.md  CONTRIBUTING.md  GOVERNANCE.md  ONBOARDING.md  RELEASE.md  TESTING.md
examples/: Containerfile
pipelines/: __init__.py
pipelines/data_processing/: README.md  __init__.py
pipelines/deployment/: __init__.py
pipelines/evaluation/: __init__.py
pipelines/monitoring/: __init__.py
pipelines/sdg/: example_pipelines.py
pipelines/training/: README.md  __init__.py
scripts/: README.md  __init__.py  compile_check.py  generate_readme.py  pytest.ini  sync_packages.py  test_compile_check.py
scripts/check_base_image_tags/: check_base_image_tags.py
scripts/check_component_freshness/: README.md  __init__.py  check_component_freshness.py  test_check_component_freshness.py
scripts/compile_check/: compile_check.py
scripts/generate_managed_pipelines/: README.md  generate_managed_pipelines.py
scripts/generate_readme/: README.md  README.md.j2  __init__.py  __main__.py  category_index_generator.py  cli.py  constants.py  content_generator.py  generator.py  metadata_parser.py  utils.py  writer.py
scripts/generate_skeleton/: generate_skeleton.py
scripts/lib/: base_image.py  discovery.py  kfp_ast.py  kfp_compilation.py  kfp_compile.py  kfp_dsl_utils.py  metadata_utils.py  parsing.py  project_utils.py  tags.py
scripts/list_all_assets/: list.py
scripts/override_base_images/: override_base_images.py
scripts/tests/: run_component_tests.py
scripts/validate_base_images/: README.md  base_image_allowlist.yaml  validate_base_images.py
scripts/validate_components/: validate_components.py
scripts/validate_examples/: validate_examples.py
scripts/validate_metadata/: metadata_schema.json  pytest.ini  requirements.txt  validate_metadata.py  validate_metadata_test.py
scripts/validate_package_entries/: validate_package_entries.py
test_data/sdg_hub/: llm_test_flow.yaml  (+1 more)
(+286 files in other folders)
