[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kfp-components"
version = "1.11.0"
description = "A collection of reusable components and pipelines for Kubeflow Pipelines"
authors = [
    {name = "Kubeflow Community"}
]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "kfp>=2.5.0",
]

[project.optional-dependencies]
lint = [
  "ruff==0.8.4",
  "yamllint==1.35.1",
]
test = [
  "pytest>=8.0.0",
  "pytest-cov>=4.1.0",
]
ci = [
    "pyyaml",
    "pytest",
    "docstring-parser",
    "jinja2",
]
# Local development (extends ci with additional tools)
dev = [
    "kfp-components[ci]",
    "kfp-components[lint]",
    "kfp-components[test]",
]

[project.urls]
Homepage = "https://www.kubeflow.org/docs/components/pipelines/"
Documentation = "https://github.com/kubeflow/pipelines-components/tree/main/docs"
Repository = "https://github.com/kubeflow/pipelines-components"
Issues = "https://github.com/kubeflow/pipelines-components/issues"

[tool.setuptools]
packages = [
    "kubeflow.pipelines.components",
    "kubeflow.pipelines.components.components",
    "kubeflow.pipelines.components.components.training",
    "kubeflow.pipelines.components.components.evaluation", 
    "kubeflow.pipelines.components.components.data_processing",
    "kubeflow.pipelines.components.components.deployment",
    "kubeflow.pipelines.components.pipelines",
    "kubeflow.pipelines.components.pipelines.training",
    "kubeflow.pipelines.components.pipelines.evaluation",
    "kubeflow.pipelines.components.pipelines.data_processing",
    "kubeflow.pipelines.components.pipelines.deployment"
]

[tool.setuptools.package-dir]
"kubeflow.pipelines.components" = "."
"kubeflow.pipelines.components.components" = "components"
"kubeflow.pipelines.components.pipelines" = "pipelines"

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.json"]

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [
    ".git",
    ".venv",
    "build",
    "dist",
    "__pycache__",
    "node_modules",
    "**/_generated/",
]

[tool.ruff.lint]
# Enable pycodestyle (E, W), pyflakes (F), isort (I), pydocstyle (D)
select = ["E", "W", "F", "I", "D"]
ignore = [
    "D100",  # Missing docstring in public module
    "D104",  # Missing docstring in public package
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["kubeflow"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
docstring-code-format = true

# Pytest configuration for KEP-913 repository structure
# Currently tests are in scripts/ only. When component/pipeline tests are added,
# this configuration will need to be updated to handle tests in components/*/tests/
[tool.pytest.ini_options]
testpaths = ["scripts"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# Don't search these directories
norecursedirs = [".git", ".venv", "build", "dist", "__pycache__", "components", "pipelines"]
